z-index bugfix

--- a/__site_layouts/site-footer.module.scss
+++ b/__site_layouts/site-footer.module.scss
@@ -9,8 +9,9 @@
   bottom: 0;
   padding-block: 100px;
   font-size: large;
-  z-index: -1;
+  z-index: 1;
   box-shadow: inset 0px 15px 30px #464343;
+
   @include mq(small) {
     padding-left: 120px;
   }
