--- a/__site_scss/_card.scss
+++ b/__site_scss/_card.scss
@@ -22,6 +22,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: 800px;
   @include mq(medium) {
     padding: 0px;
     max-width: 700px;
@@ -48,7 +49,6 @@
   background-position-y: 10%;
   overflow: hidden;
   padding-inline: 3.5rem;
-  z-index: -1;
 
   * {
     margin-block: 0.6rem;
@@ -82,7 +82,6 @@
     position: relative;
     overflow: hidden;
     left: 10%;
-    z-index: -1;
 
     @include mq(medium) {
       left: 22%;
